--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -5,8 +5,7 @@ page {
 }
 
 .container {
-  width: 100%;
-  overflow: scroll;
+  width: 100vw;
 }
 
 .tip_text {
@@ -19,6 +18,7 @@ page {
 }
 
 .goods-list {
+  /* background-color: blueviolet; */
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -43,13 +43,10 @@ page {
 
 .order-pay {
   position: absolute;
-  text-align: center;
-  line-height: 37px;
   font-size: 14px;
   right: 0;
   height: 100%;
   color: white;
-  width: 90px;
   background-color: #13227a;
   border-radius: 0 90px 90px 0;
 }
@@ -64,9 +61,11 @@ page {
   bottom: 3px;
   align-items: center;
   background-color: #dadadac0;
+  border: 1px solid #dadadac0;
   z-index: 1000;
   border-radius: 90px;
-  width: 90%;
+  margin-left: 2.5vw;
+  width: 90vw;
   height: 36px;
   display: flex;
   position: fixed;
