--- a/miniprogram/pages/user-center/index.wxml
+++ b/miniprogram/pages/user-center/index.wxml
@@ -1,72 +1,72 @@
 <!-- pages/me/index.wxml -->
 <cu-custom bgColor="bg-white" isBack="{{false}}">
-	<view slot="backText">返回</view>
-	<view slot="content">我</view>
+  <view slot="backText">返回</view>
+  <view slot="content">我</view>
 </cu-custom>
-<view class="page_container">
-    <view class="top_bg" />
-    <view class="main_content">
-        <view class="userinfo_container">
-            <block wx:if="{{!hasUserInfo}}">
-                <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 登录 </button>
-                <button wx:else open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo"> 获取头像昵称 </button>
-            </block>
-            <block wx:else>
-                <view class='mytop-box'>
-                    <view class="mytop-avatar">
-                        <open-data type="userAvatarUrl"></open-data>
-                    </view>
-                    <view class='mytop-username'>
-                        <open-data type="userNickName"></open-data>
-                    </view>
-                    <!-- <image bindtap="bindViewTap" class="mytop-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+<view>
+  <view class="top_bg" />
+  <view class="main_content" style="height: {{containerHeight - 120}}rpx;">
+    <view class=" userinfo_container">
+      <block wx:if="{{!hasUserInfo}}">
+        <button wx:if="{{canIUseGetUserProfile}}" bindtap="getUserProfile"> 登录 </button>
+        <button wx:else open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo"> 获取头像昵称 </button>
+      </block>
+      <block wx:else>
+        <view class='mytop-box'>
+          <view class="mytop-avatar">
+            <open-data type="userAvatarUrl"></open-data>
+          </view>
+          <view class='mytop-username'>
+            <open-data type="userNickName"></open-data>
+          </view>
+          <!-- <image bindtap="bindViewTap" class="mytop-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
                     <text class="mytop-nickname">{{userInfo.nickName}}</text> -->
-                </view>
+        </view>
 
-            </block>
+      </block>
 
-            <!-- 头像昵称end -->
-            <block wx:if="{{canIUse}}">
-                <!-- <view class="username" bind:tap="getOpenId">请点击登录</view> -->
-                <!-- 需要使用 button 来授权登录 -->
-                <!-- <button open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">授权登录</button> -->
-            </block>
-            <!-- <block wx:else>
+      <!-- 头像昵称end -->
+      <block wx:if="{{canIUse}}">
+        <!-- <view class="username" bind:tap="getOpenId">请点击登录</view> -->
+        <!-- 需要使用 button 来授权登录 -->
+        <!-- <button open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">授权登录</button> -->
+      </block>
+      <!-- <block wx:else>
                 <view class="username">openId: {{ openId }}</view>
             </block> -->
-        </view>
-        <view class="settings_container">
-            <view class="setting_item">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/setting.svg" />
-                    <view class="setting_text">个人信息设置</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-            <view class="setting_item">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/question.svg" />
-                    <view class="setting_text">常见问题</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-            <view class="setting_item">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/customer-service.svg" />
-                    <button open-type="contact" class="contact-button">
-                        联系客服
-                    </button>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-            <view class="setting_item" bind:tap="gotoApplicationPage">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/share.svg" />
-                    <view class="setting_text">申请成为店长</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-        </view>
     </view>
-    <cloud-tip-modal showUploadTipProps="{{showUploadTip}}" />
+    <view class="settings_container">
+      <view class="setting_item">
+        <view class="left">
+          <image class="setting_icon" src="../../images/icons/setting.svg" />
+          <view class="setting_text">个人信息设置</view>
+        </view>
+        <image class="arrow_icon" src="../../images/arrow.svg" />
+      </view>
+      <view class="setting_item">
+        <view class="left">
+          <image class="setting_icon" src="../../images/icons/question.svg" />
+          <view class="setting_text">常见问题</view>
+        </view>
+        <image class="arrow_icon" src="../../images/arrow.svg" />
+      </view>
+      <view class="setting_item">
+        <view class="left">
+          <image class="setting_icon" src="../../images/icons/customer-service.svg" />
+          <button style="background-color: white;" open-type="contact" class="contact-button">
+            联系客服
+          </button>
+        </view>
+        <image class="arrow_icon" src="../../images/arrow.svg" />
+      </view>
+      <view class="setting_item" bind:tap="gotoApplicationPage">
+        <view class="left">
+          <image class="setting_icon" src="../../images/icons/share.svg" />
+          <view class="setting_text">申请成为店长</view>
+        </view>
+        <image class="arrow_icon" src="../../images/arrow.svg" />
+      </view>
+    </view>
+  </view>
+  <cloud-tip-modal showUploadTipProps="{{showUploadTip}}" />
 </view>
