--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,11 +1,4 @@
 /**index.wxss**/
-
-page {
-    background-color: #fff;
-}
-
-
-
 .tip_text {
     width: 100%;
     height: 400rpx;
@@ -77,7 +70,7 @@ page {
     gap: 16rpx;
     align-items: center;
     box-sizing: border-box;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 .goods-item.even {
@@ -100,6 +93,7 @@ page {
     font-style: normal;
     font-weight: 400;
     text-align: left;
+    padding-left: 12rpx;
     width: 100%;
 }
 
@@ -108,15 +102,29 @@ page {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    padding-left: 12rpx;
 }
 
 .goods-price {
     display: flex;
     align-items: center;
+    text-decoration: line-through;
     gap: 4rpx;
     font-family: "PingFang SC";
     font-size: 14px;
     color: rgba(0, 0, 0, 0.9);
+    font-weight: 600;
+    padding-bottom: 12rpx;
+    padding-left: 12rpx;
+}
+
+.vip-price {
+    display: flex;
+    align-items: center;
+    gap: 4rpx;
+    font-family: "PingFang SC";
+    font-size: 14px;
+    color: rgba(187, 112, 0, 0.9);
     font-weight: 600;
 }
 
@@ -159,30 +167,9 @@ page {
     height: 100%;
 }
 
-/* 上 */
-.info-top {
-    position: fixed;
-    z-index: 999;
-    width: 100%;
-    top: 0;
-    background-color: white;
-    border-bottom-left-radius: 5rpx;
-    border-bottom-right-radius: 5rpx;
-}
 
-/* 中 */
-.info-center {
-    position: fixed;
-    z-index: 999;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10rpx;
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
-}
+
+
 
 /* 下 */
 .info-bottom {
@@ -193,31 +180,6 @@ page {
     background-color: white;
     border-top-left-radius: 10rpx;
     border-top-right-radius: 10rpx;
-}
-
-/* 左 */
-.info-left {
-    position: fixed;
-    z-index: 999;
-    width: 50%;
-    height: 100%;
-    top: 0;
-    background-color: white;
-    border-top-right-radius: 10rpx;
-    border-bottom-right-radius: 10rpx;
-}
-
-/* 右 */
-.info-right {
-    position: fixed;
-    z-index: 999;
-    width: 50%;
-    height: 100%;
-    right: 0;
-    top: 0;
-    background-color: white;
-    border-top-left-radius: 10rpx;
-    border-bottom-left-radius: 10rpx;
 }
 
 /* 自定义内容（根据自己需求更改,可删除） */
@@ -285,10 +247,4 @@ button {
 .right-btn {
     background-color: #33ccff;
     color: white;
-}
-
-.fixed {
-    position: fixed;
-    bottom: 0;
-    width: 50%;
 }
