--- a/miniprogram/pages/pay-car/index.wxss
+++ b/miniprogram/pages/pay-car/index.wxss
@@ -1,86 +1,45 @@
 /* pages/pay-car/index.wxss */
 page {
-  width: 100%;
-  /* background-color: #fff; */
+    width: 100%;
 }
 
-.container {
-  width: 100%;
-  overflow: scroll;
-}
+
 
 .tip_text {
-  width: 100%;
-  height: 400rpx;
-  line-height: 400rpx;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.5);
-  font-size: 28rpx;
+    width: 100%;
+    height: 400rpx;
+    line-height: 400rpx;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 28rpx;
 }
 
-.goods-list {
-  width: 100%;
-}
 
-.goods-item {
-  width: 100vm;
-  display: flex;
-  justify-content: space-around;
-  /* flex-direction: column; */
-  margin-left: 12px;
-  margin-right: 12px;
-  gap: 16rpx;
-  align-items: center;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-}
-
-.goods-image {
-  width: 100px;
-}
 
 .goods-title {
-  font-family: "PingFang SC";
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  text-align: left;
-  width: 100%;
+    font-family: "PingFang SC";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    text-align: left;
+    /* width: 100%; */
 }
 
-.goods-bottom-container {
-  width: 100%;
-  text-align: end;
-}
 
 .goods-price {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 4rpx;
-  font-family: "PingFang SC";
-  font-size: 14px;
-  color: rgba(0, 0, 0, 0.9);
-  font-weight: 600;
-}
-
-.price-symbol {
-  font-size: 24rpx;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 4rpx;
 }
 
 .bottom_tips {
-  width: 100%;
-  text-align: center;
-  font-size: 28rpx;
-  color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  bottom: 100rpx;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.fixed {
-  position: fixed;
-  bottom: 0;
-  width: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 28rpx;
+    color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    bottom: 100rpx;
+    left: 50%;
+    transform: translateX(-50%);
 }
