--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -48,7 +48,7 @@
                 去结算
             </button>
         </view>
-        <scroll-view scroll-y="true" style="height: {{containerHeight}}rpx;">
+        <scroll-view scroll-y="true" style="height: {{containerHeight}}rpx;padding-bottom: 40rpx;">
             <!-- 商品列表 -->
             <view class="goods-list cu-card">
                 <block wx:for="{{ goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
@@ -79,7 +79,7 @@
             </view>
         </scroll-view>
     </view>
-    
+
     <!-- 无数据 -->
     <block wx:else>
             <view style="text-align: center;margin-top: 20vh;">
