--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -13,9 +13,9 @@
 <!-- 数据加载完毕 -->
 <block wx:if="{{ !isLoading }}">
     <!-- 店铺 -->
-    <view class="cu-bar bg-white" style="display: flex;align-items: center;padding: 9px;width: 100vw;">
+    <view class="cu-bar bg-white padding-lr" style="display: flex;align-items: center;width: 100vw;height: 100rpx;">
         <picker style="flex: 1;" bindchange="bindPickerChange" value="{{index}}" range="{{shopLisp}}" range-key="name">
-            <view style="font-size: 12px;padding-left: 9px;">
+            <view style="font-size: 12px;">
                 {{shopLisp[index].name}}
             </view>
         </picker>
@@ -48,7 +48,7 @@
                 去结算
             </button>
         </view>
-        <scroll-view scroll-y="true" style="height: {{containerHeight}}rpx;padding-bottom: 40rpx;">
+        <scroll-view scroll-y="true" style="height: {{containerHeight - 100}}rpx;">
             <!-- 商品列表 -->
             <view class="goods-list cu-card">
                 <block wx:for="{{ goodsList }}" wx:for-item="goodsDetail" wx:key="_id" wx:for-index="index">
@@ -77,6 +77,7 @@
                     </view>
                 </block>
             </view>
+            <view style="height: 90rpx;"></view>
         </scroll-view>
     </view>
 
