--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -13,10 +13,10 @@
 <!-- 数据加载完毕 -->
 <block wx:if="{{ !isLoading }}">
     <!-- 店铺 -->
-    <view class="cu-bar bg-white padding-lr" style="display: flex;align-items: center;width: 100vw;height: 100rpx;">
-        <picker style="flex: 1;" bindchange="bindPickerChange" value="{{index}}" range="{{shopLisp}}" range-key="name">
-            <view style="font-size: 12px;">
-                {{shopLisp[index].name}}
+    <view class="cu-bar bg-white padding-lr" style="display: flex;align-items: center;width: 100vw;height: 90rpx;">
+        <picker style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
+            <view style="font-size: 12px;line-height: 90rpx;">
+                {{shopList[index].name}}
             </view>
         </picker>
         <image style="width: 16px;" src="../../images/icons/more.png" mode="widthFix" />
@@ -83,11 +83,11 @@
 
     <!-- 无数据 -->
     <block wx:else>
-            <view style="text-align: center;margin-top: 20vh;">
-                <image style="width: 50vw;" src="../../images/icons/no-data.svg" mode="widthFix" />
-                <view style="top: -240rpx;">暂无数据</view>
-            </view>
-        </block>
+        <view style="text-align: center;margin-top: 20vh;">
+            <image style="width: 50vw;" src="../../images/icons/no-data.svg" mode="widthFix" />
+            <view style="top: -240rpx;">暂无数据</view>
+        </view>
+    </block>
 
     <!-- 底部弹窗 -->
     <view class="popup-box" wx:if="{{showOrder}}" bindtap="closePopup"></view>
