--- a/miniprogram/pages/user-center/index.wxss
+++ b/miniprogram/pages/user-center/index.wxss
@@ -9,13 +9,15 @@
 }
 
 .main_content {
-    background-color: #fff;
+    /* background-color: #fff; */
     border-top-left-radius: 30rpx;
     border-top-right-radius: 30rpx;
     position: relative;
 }
 
 .userinfo_container {
+    background-color: white;
+    height: 270rpx;
     width: 100vw;
     display: flex;
     /* gap: 80rpx; */
@@ -38,8 +40,9 @@
 }
 
 .settings_container {
+    top: 250rpx;
+    background-color: var(--ghostWhite);
     position: relative;
-    top: 150rpx;
     padding: 0 40rpx;
     display: flex;
     flex-direction: column;
@@ -54,6 +57,23 @@
     border-bottom: 1rpx solid rgba(0, 0, 0, 0.08);
     font-size: 28rpx;
 }
+.vip_container{
+    position: relative;
+    top: 150rpx;
+    padding: 0 15rpx;
+    display: flex;
+    flex-direction: column;
+    gap: 10rpx;
+    z-index: 100;
+}
+
+.vip_item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30rpx 0rpx;
+    font-size: 28rpx;
+}
 
 .left {
     display: flex;
@@ -62,12 +82,14 @@
 }
 
 .contact-button {
+    background-color: transparent;
+    /* background-color: turquoise; */
     padding-top: 10rpx;
     padding-bottom: 10rpx;
     box-sizing: border-box;
     padding-left: 0rpx;
     margin: 0;
-    width: 400rpx;
+    width: 100%;
     font-weight: 400;
     font-size: 28rpx;
     color: rgba(0, 0, 0, 0.9);
@@ -104,12 +126,13 @@
 }
 
 .mytop-avatar {
+    /* position: relative; */
     overflow: hidden;
     width: 130rpx;
     height: 130rpx;
     /* left: 50%; */
     border-radius: 50%;
-    box-shadow: 3px 3px 10px rgba(255, 102, 0, 0.2);
+    box-shadow: 3px 3px 10px rgba(146, 146, 146, 0.2);
 }
 
 .mytop-username {
